--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-requests
-beautifulsoup4
-lxml
-boto3
+requests==2.28.2
+beautifulsoup4==4.11.2
+lxml==4.9.2
+boto3==1.26.81
 git+https://github.com/tomquirk/linkedin-api.git
 
